# python-intro-test

./: LICENSE  README.md  main.py  pyproject.toml
examples/: tutorial.ipynb
src/my_python_package/: __init__.py  __main__.py
