[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-analysis-tool"
version = "0.1.0"
description = "Add your description here: data analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["my_python_package"]

[tool.setuptools.package-data]
"my_python_package" = ["*.csv"]